--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 anyhow = "1.0.97"
+clap = { version = "4.5.34", features = ["derive"] }
 clearscreen = "4.0.1"
 rand = "0.9.0"
 random = "0.14.0"
